<resources>
    <string name="app_name">Handl</string>
    <string name="action_settings">Settings</string>
    <string name="scan">SCAN</string>
    <string name="discoverability">Discoverability</string>
    <string name="facebook_app_id">373621940154600</string>
    <string name="fb_login_protocol_scheme">fb373621940154600</string>
    <string name="title_activity_profile_view">ProfileView</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="facebook">Facebook</string>
    <string name="accounts">Accounts</string>
    <string name="forage">Handl</string>
    <string name="find_people">Find People</string>
    <string name="title_activity_settings">settingsActivity</string>
    <string name="action_scanner">Scan Nearby</string>
    <string name="action_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instagramTitle">Instagram</string>
    <string name="Link">Link</string>
    <string name="extra">Extra</string>
    <string name="at">\@</string>
    <string name="Twitter">Twitter</string>
    <string name="Bio">Bio</string>
    <string name="facebookTitle">Facebook</string>
    <string name="facebookUsernameTitle">Facebook Username</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="instagram">Instagram</string>
    <string name="title_activity_new_profile_view">NewProfileView</string>
    <string name="Profile">Profile</string>
    <string name="current_views">Current Views</string>
    <string name="Snapchat">Snapchat</string>
    <string name="delete_account_from_forage">Delete Account from Handle</string>
    <string name="TotalViews">Total Views</string>
    <string name="get_started">Get Started</string>
    <string name="scanner_frequency">Scanner Frequency</string>
    <string name="start_scanning">Start Scan</string>
    <string name="milliseconds">ms</string>
    <string name="search_people">Search People</string>
    <string name="enter_name">Search Handl Username</string>
    <string name="search">Search</string>
    <string name="enter_forage_handle">Enter Handl</string>
    <string name="hint_username">e.g john_doe32</string>
    <string name="next">CONFIRM</string>
    <string name="no_find_username">Unable to Find User</string>
    <string name="username_short">Username too short</string>
    <string name="usernam_long">Username too long</string>
    <string name="username_exists">Username already exists</string>
    <string name="handle">Handle</string>
    <string name="username">Username</string>
    <string name="selfusername">You entered your username</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="edit">Edit</string>

    <string name="edit_fb">Edit Facebook</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="edit_snapchat">Edit Snapchat</string>
    <string name="edit_twitter">Edit Twitter</string>
    <string name="edit_insta">Edit Instagram</string>
    <string name="edit_link">Edit Link</string>
    <string name="username_example">Username</string>
    <string name="discover">Discover</string>

</resources>
