<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkbck"
    tools:context=".EnterHandles">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/enter_handles"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/advent_pro_thin"
        android:text="@string/enter_forage_handle"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="100sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/enter_handles"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/advent_pro_thin"
        android:text="@string/username"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/enter_handles"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/darkprm"
        android:layout_width="200dp"
        android:hint="@string/hint_username"
        android:autofillHints="@string/username_example"
        android:layout_height="50dp"
        android:gravity="center"
        android:inputType="text"
        android:layout_centerInParent="true"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/error_username_text"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/enter_handles"
        />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:elevation="20dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        android:text="@string/next"
        android:textSize="16sp" />

    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/usernamefind_prog"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="100dp"
        android:layout_centerInParent="true"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:SpinKit_Color="@color/white" />
</RelativeLayout>