<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary"
    tools:context=".loginAuth">


    <TextView
        android:id="@+id/applogo"
        android:layout_width="384dp"
        android:layout_height="238dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/advent_pro_thin"
        android:text="@string/handle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="150sp" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="223dp"
        android:layout_height="78dp"
        android:layout_below="@id/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/find_people"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/get_started"
        android:layout_below="@id/textView2"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/getstarted"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@id/getstarted"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        />

</RelativeLayout>