<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewProfileView"
    tools:showIn="@layout/activity_new_profile_view">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profilePhoto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/profile_picture" />

            <RelativeLayout

                android:id="@+id/accountsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileName"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">


                <ImageView
                    android:id="@+id/instaButton"
                    android:layout_width="50dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="120dp"
                    android:contentDescription="@string/instagram"
                    android:src="@drawable/ig_logo" />

                <ImageView
                    android:id="@+id/fbBtn"
                    android:layout_width="45dp"
                    android:layout_height="50dp"
                    android:layout_alignEnd="@id/instaButton"
                    android:layout_marginEnd="90dp"
                    android:contentDescription="@string/facebook"
                    android:src="@drawable/facebook_icon" />

                <ImageView
                    android:id="@+id/twitterBtn"
                    android:layout_width="75dp"
                    android:layout_height="60dp"
                    android:layout_alignStart="@id/instaButton"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/Twitter"
                    android:src="@drawable/twitter" />

                <ImageView
                    android:id="@+id/snapchatBtn"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignStart="@id/twitterBtn"
                    android:layout_marginStart="90dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/Snapchat"
                    android:src="@drawable/snapchat" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/bioContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/accountsContainer"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded2"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/bioTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/Bio"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/bioText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bioTitle"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/customcontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bioContainer"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded2">

                <TextView
                    android:id="@+id/linkTitle"
                    android:layout_width="378dp"
                    android:layout_height="50dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/Link"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/linkTEXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linkTitle"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />


            </RelativeLayout>

            <TextView
                android:id="@+id/profileName"
                android:layout_width="259dp"
                android:layout_height="54dp"
                android:layout_below="@id/profilePhoto"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>