<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:background="@color/lightgrey">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/profTool"
        app:title="@string/Profile"
        app:titleTextColor="@android:color/white"
        android:layout_height="45dp">
    </android.support.v7.widget.Toolbar>


    <ImageView
        android:id="@+id/doneTick"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_toStartOf="@id/settings_btn"
        android:src="@drawable/ic_check" />

    <ImageView
        android:id="@+id/settings_btn"
        android:layout_width="34dp"
        android:layout_height="45dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentEnd="true"

        android:src="@drawable/ic_settings_black_24dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/profTool"
        android:layout_height="match_parent">

    <RelativeLayout
        android:clipToPadding="false"
        android:paddingBottom="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/myProfileView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            />
        
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/myName"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:layout_marginTop="170dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/myHandle"
            android:layout_below="@id/myName"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:textColor="@color/com_facebook_blue"
            android:textSize="15sp"
            />


        <RelativeLayout
            android:layout_width="135dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:elevation="5dp"
            android:background="@drawable/rounded2"
            android:layout_marginTop="10dp"
            android:layout_below="@id/myHandle"
            android:id="@+id/viewcontainer">

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/viewTitle"
                android:layout_centerHorizontal="true"
                android:text="@string/current_views"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_height="30dp" />
            <TextView
                android:layout_width="100dp"
                android:id="@+id/viewsCount"
                android:layout_below="@id/viewTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_height="35dp" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:elevation="4dp"
            android:translationZ="4dp"
            android:background="@drawable/rounded2"
            android:layout_toEndOf="@id/viewcontainer"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/myHandle"
            android:id="@+id/totalviewcontainer">

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/totalviewText"
                android:layout_centerHorizontal="true"
                android:text="@string/TotalViews"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_height="30dp" />
            <TextView
                android:layout_width="100dp"
                android:id="@+id/totalviewcount"
                android:textAlignment="center"
                android:layout_below="@id/totalviewText"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_height="35dp" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:id="@+id/bioContainer"
            android:elevation="5dp"
            android:background="@drawable/rounded2"
            android:paddingBottom="15dp"
            android:layout_below="@+id/viewcontainer"
            android:layout_height="200dp">

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/BioTitle"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="250dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:text="@string/Bio"
                />

            <EditText
                    android:layout_width="match_parent"
                    android:background="@color/lightgrey"
                    android:layout_height="400dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/bioEdit"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"

                    />

            <TextView
                android:layout_width="70dp"
                android:id="@+id/charLengthView"
                android:layout_height="30dp"
                android:textColor="@android:color/black"
                android:layout_marginStart="300dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="30dp"
                android:textSize="15sp"
                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/facebookcontainer"
            android:background="@drawable/rounded_facebook"
            android:layout_margin="10dp"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_below="@id/bioContainer"
            android:layout_height="150dp">

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/facebookTitle"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:text="@string/facebookUsernameTitle"
                />

            <EditText
                android:id="@+id/facebookEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:background="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="70dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/instagramContainer"
            android:background="@drawable/rounded_insta"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:layout_width="match_parent"
            android:layout_below="@id/facebookcontainer"
            android:layout_height="150dp">

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/instagramTitle"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"

                android:text="@string/instagramTitle"
                />

            <EditText
                android:id="@+id/instagramUserName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="70dp" />
            <TextView
                android:layout_width="60dp"
                android:layout_marginStart="10dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginTop="70dp"
                android:textSize="25sp"
                android:textAlignment="center"
                android:text="@string/at" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/snapchatContainer"
            android:background="@drawable/rounded_snapchat"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:elevation="4dp"
            android:layout_below="@id/instagramContainer"
            android:layout_height="150dp">

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/SnapchatTitle"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:text="@string/Snapchat"
                />

            <EditText
                android:id="@+id/snapchatUsername"
                android:hint=""
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="70dp" />
            <TextView
                android:layout_width="60dp"
                android:layout_marginStart="10dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginTop="70dp"
                android:textSize="25sp"
                android:textAlignment="center"
                android:text="@string/at" />

        </RelativeLayout>
        <RelativeLayout
            android:background="@drawable/rounded_twitter"
            android:id="@+id/twitterContainer"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:elevation="4dp"
            android:layout_below="@id/snapchatContainer"
            android:layout_height="150dp">

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/twitterTitle"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:text="@string/Twitter"
                />
            <EditText
                android:id="@+id/twitterEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginTop="70dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="10dp"

                />
            <TextView
                android:layout_width="60dp"
                android:layout_marginStart="10dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginTop="70dp"
                android:textSize="25sp"
                android:textAlignment="center"
                android:text="@string/at" />
        </RelativeLayout>

        <RelativeLayout
            android:background="@color/green"
            android:id="@+id/linkContainer"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:elevation="4dp"
            android:layout_below="@id/twitterContainer"
            android:layout_height="150dp">

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/linkTitle"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:text="@string/Link"
                />
            <EditText
                android:id="@+id/linkEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:background="@color/white"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                />
        </RelativeLayout>

    </RelativeLayout>

    </ScrollView>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressCircle"
        style="@style/SpinKitView.Large.ThreeBounce"
        android:layout_width="100dp"
        android:layout_centerInParent="true"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:SpinKit_Color="@color/colorAccent" />




</RelativeLayout>